syntax = "proto3";

import "common.proto";

option java_package = "proto";
option java_multiple_files = true;

service CreateTopicsService {
  rpc CreateTopics(CreateTopicsRequest) returns (CreateTopicsResult);
}

message CreateTopicsRequest {
  repeated Topic topics = 1;
}

message Topic {
  string topic_name = 1;
  uint32 num_partitions = 2;
  uint32 replication_factor = 3;
}

message CreateTopicsResult {
  string acknowledgement = 1;
  Status status = 2;
  repeated string topic_names = 3;
  uint32 total_num_partitions_created = 4;
}