syntax = "proto3";

import "common.proto";

option java_package = "proto";
option java_multiple_files = true;

service PublishToBroker {
  rpc Send(PublishDataToBrokerRequest) returns (BrokerToPublisherAck);
}

message PublishDataToBrokerRequest {
  repeated Record records = 1;
  CompressionType compression_type = 2;
  bytes compressed_data = 3;
  bool is_compressed = 4;
}

message Record {
  int32 target_partition = 1;
  bytes data = 2;
  string topic = 3;
}

message BrokerToPublisherAck {
  string acknowledgement = 1;
  Status status = 2;
  int32 record_offset = 3;
}